--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
     "target": 3
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
-  "references": [{ "path": "./tsconfig.node.json" }],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
