--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # 开发环境后端API地址
-VITE_API_BASE_URL=http://localhost:8000
+VITE_API_BASE_URL=http://202.38.79.182:8000
 
 # 生产环境后端API地址（可以在构建时覆盖）
 # VITE_API_BASE_URL=http://your-production-server-ip:8000
