--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@capacitor/core": "^7.4.4",
     "@vitejs/plugin-vue": "^6.0.1",
     "rollup": "^4.53.3",
-    "vite": "^7.2.4"
+    "typescript": "^5.9.3",
+    "vite": "^7.2.4",
+    "vite-plugin-static-copy": "^3.1.4"
   }
 }
