--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,5 +7,5 @@
     "allowSyntheticDefaultImports": true,
     "allowJs": true
   },
-  "include": ["vite.config.js"]
+  "include": ["vite.config.ts"]
 }
