--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,35 @@
-node_modules
-android
-dist
-.vscode
+# 依赖目录
+node_modules/
 
+# 构建输出
+dist/
+build/
+
+# 环境配置
 .env
 .env.local
 .env.*.local
 
-package-lock.json  # npm
-yarn.lock         # yarn
-pnpm-lock.yaml    # pnpm
+# 包管理器锁文件
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
 
+# 日志文件
+*.log
 
+# 编辑器和IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# 操作系统文件
+.DS_Store
+Thumbs.db
+Desktop.ini
+
+# 移动平台目录
+android/
+ios/
