--- a/public/supersplat-viewer/settings.json
+++ b/public/supersplat-viewer/settings.json
@@ -5,7 +5,7 @@
     "position": [0,-100,-100],
     "target": [0,0,0],
     "rotation": [0,0,0],
-    "startAnim": "none"
+    "startAnim": "orbit"
   },
   "animTracks": []
 }
