--- a/package.json
+++ b/package.json
@@ -21,13 +21,10 @@
     "@fortawesome/fontawesome-free": "^7.1.0",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/media-capture": "^5.36.0",
-    "@playcanvas/supersplat-viewer": "^1.9.1",
-    "@playcanvas/web-components": "^0.2.11",
+    "@sparkjsdev/spark": "^0.1.10",
     "@types/three": "^0.181.0",
     "cordova-plugin-file": "^8.1.3",
     "cordova-plugin-media-capture": "^6.0.0",
-    "playcanvas": "^2.14.1",
-    "supersplat": "github:playcanvas/supersplat",
     "three": "^0.181.2",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3"
