--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -3,6 +3,9 @@
   "appName": "3D照片重建",
   "webDir": "dist",
   "bundledWebRuntime": false,
+  "server": {
+    "cleartext": true
+  },
   "plugins": {
     "MediaCapture": {
       "cameraPermission": "允许此应用访问您的相机以录制视频",
